# ai-phishing-detector

./: .gitignore  DEPLOYMENT.md  LICENSE  OPERATIONS.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  db.py  main.py  schemas.py
app/api/: predict.py
app/ml/: features.py  preprocess.py
app/models/: __init__.py  trainer.py
app/utils/: explain.py  logger.py
data/processed/: .gitkeep
data/raw/: .gitkeep
docker/: Dockerfile
frontend/: index.html
infra/terraform/aws/: main.tf
models/: .gitkeep  metrics-v20251201_204649.json  metrics-v20251201_210615.json  metrics-v20251201_211008.json  metrics-v20251201_211340.json  metrics-v20251201_213433.json  metrics-v20251201_213706.json  metrics-v20251201_234019.json
tests/: test_api.py  test_model.py
